Fix overlapping higherarchies for anchors

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -42,6 +42,12 @@ img {
 
 }
 
+// crazy bootstrap and wordpress collisions
+
+.exerpt-read-more {
+  text-align: right;
+}
+
 // css
 
 body {
